BE_Cluster_v1/deployments/burymeahatchet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burymeahatchet
  namespace: be
spec:
  selector:
    matchLabels:
      app: burymeahatchet
  template:
    metadata:
      labels:
        app: burymeahatchet
    spec:
      containers:
      - name: burymeahatchet
        image: 058264430807.dkr.ecr.eu-west-1.amazonaws.com/burymeahatchet:dev-5a28d562a1bbb94a1106610d6e597ead31b19903-20240501220153
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: burymeahatchet-service
  namespace: be
spec:
  selector:
    app: burymeahatchet
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
