BE_Cluster_v1/deployments/burymeahatchet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burymeahatchet-ingress
  namespace: be
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: burymeahatchet-service
            port:
              number: 80
